update code solution

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body
-    class="min-h-screen flex flex-col justify-center items-center bg-[url('/assets/images/background-pattern-mobile.svg')] md:bg-[url('/assets/images/background-pattern-desktop.svg')] bg-repeat-x bg-LightPink font-WorkSans"
+    class="min-h-screen flex flex-col justify-center items-center bg-[url('./assets/images/background-pattern-mobile.svg')] md:bg-[url('./assets/images/background-pattern-desktop.svg')] bg-repeat-x bg-LightPink font-WorkSans"
   >
     <main class="bg-White mx-6 p-12 rounded-xl md:w-[600px]" >
       <div class="flex justify-start items-center space-x-4">
