--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <p class=" text-4xl md:text-5xl font-bold">FAQs</p>
       </div>
       <div class="flex flex-col justify-between items-start space-y-5 mt-8">
-        <details class="w-full border-b-[1px] border-b-gray-100 hover:text-GrayishPurple" x-data="{ open: false }" 
-        :open="open" 
+        <details open class="w-full border-b-[1px] border-b-gray-100 hover:text-GrayishPurple" x-data="{ open: true }" :open="open" 
         @toggle="open = !open">
           <summary
             class="list-none appearance-none flex justify-between items-center mb-6 md:space-x-8"
